[package]
name = "hypergraph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nonempty = "^0.8.1"
either = "^1.8.1"
petgraph = "^0.5.0"
union-find = "0.4.1"
env_logger = "^0.9.3"
log = { version = "^0.4.17", features = ["max_level_debug", "release_max_level_warn"] }
permutations = "^0.1.1"
rand = "^0.8.5"